Making it compatible with jdk17