@@ -111,7 +111,7 @@ public class FetchJoinEntityQueryExecutor extends AbstractSearchQuery
 			{
 				try
 				{
-					return collectionReturnType.newInstance();
+					return collectionReturnType.getConstructor().newInstance();
 				}catch(Exception ex)
 				{
 					throw new IllegalStateException("An error occurred while creating return collection: " + collectionReturnType.getName(), ex);
@@ -123,7 +123,7 @@ public class FetchJoinEntityQueryExecutor extends AbstractSearchQuery
 			
 			try
 			{
-				lst = (Collection)collectionReturnType.newInstance();
+				lst = (Collection)collectionReturnType.getConstructor().newInstance();
 			}catch(Exception ex)
 			{
 				throw new IllegalStateException("An error occurred while creating return collection: " + collectionReturnType.getName(), ex);
